<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:id="@+id/ll_unbind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/common2_button_bg"
        android:clickable="true"
        >
        <TextView 
            android:id="@+id/tv_unbind"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/unbind"
            android:padding="10dp"
            android:textSize="18sp"
            />
        <LinearLayout 
            android:id="@+id/ll_unbind_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:gravity="center_vertical"
            >
            <Button 
                android:id="@+id/btn_unbind_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:background="@drawable/common_button_bg"
                android:drawableTop="@drawable/selector_btn_cancel_bind"
                />
            <Button 
                android:id="@+id/btn_unbind_ok"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/ok"
                android:layout_weight="1"
                android:background="@drawable/common_button_bg"
                android:drawableTop="@drawable/selector_btn_delete_bind"
                />
        </LinearLayout>
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/app_base_color"
        />
    
    <LinearLayout 
        android:id="@+id/ll_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/common2_button_bg"
        android:clickable="true"
        >
        <TextView 
            android:id="@+id/tv_rename"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/rename"
            android:padding="10dp"
            android:textSize="18sp"
            />
        <LinearLayout 
            android:id="@+id/ll_rename_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:gravity="center_vertical"
            >
            <EditText 
                android:id="@+id/et_rename"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:background="@drawable/shape_edging"
                android:padding="3dp"
                android:layout_marginLeft="5dp"
                android:hint="@string/input_new_name"
                />
             <Button 
                android:id="@+id/btn_rename_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:background="@drawable/common_button_bg"
                />
            <Button 
                android:id="@+id/btn_rename_ok"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/ok"
                android:background="@drawable/common_button_bg"
                />
        </LinearLayout>
    </LinearLayout>
	<!-- <View 
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/app_base_color"
        /> -->
</LinearLayout>
