<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_edit"
        >
        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/smart_refresh_per_msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.scwang.smartrefresh.header.CircleHeader
                android:layout_width="match_parent"
                android:layout_height="200px" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_per_msg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="right|center"
            >
            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="80px"
                android:layout_marginBottom="80px"
                android:clickable="true"
                android:visibility="gone"
                android:background="@drawable/selector_edit_msg"
                />
        </com.zhy.autolayout.AutoRelativeLayout>


    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rl_edit"
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:background="#eef"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/tv_delete_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/cancel"
            android:layout_marginLeft="100px"
            android:layout_centerVertical="true"
            android:drawableTop="@drawable/selector_btn_cancel_bind"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/delete"
            android:layout_centerVertical="true"
            android:drawableTop="@drawable/selector_btn_delete_bind"
            android:padding="5dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/tv_choose_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="100px"
            android:text="@string/choose_all"
            android:layout_centerVertical="true"
            android:drawableTop="@drawable/selector_btn_delete_bind"
            android:padding="5dp"
            />
    </com.zhy.autolayout.AutoRelativeLayout>

</com.zhy.autolayout.AutoRelativeLayout>
