<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@color/app_base_color"
	android:fitsSystemWindows="true"
	android:clipToPadding="true"
    tools:context="com.quhwa.cloudintercom.activity.VisitorPwdActivity" >
    <include 
	    layout="@layout/title_layout"
	    android:id="@+id/area_visitor_title"
	    />

    <!--<LinearLayout
        android:id="@+id/ll_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_visitor_title"
        android:visibility="gone"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        >
        <TextView 
            android:id="@+id/tv_check_last_time_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/look_over_last_time_pwd"
            android:padding="10dp"
            android:clickable="true"
            android:background="@drawable/common2_button_bg"
            />
    </LinearLayout>-->

	<com.zhy.autolayout.AutoRelativeLayout
		android:background="@color/white"
		android:layout_below="@+id/area_visitor_title"
		android:layout_width="match_parent"
		android:layout_height="match_parent">


		<!--室内机选择列表-->
	<com.zhy.autolayout.AutoLinearLayout
	    android:id="@+id/ll_choose"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_centerHorizontal="true"
		android:layout_margin="10dp"
		android:gravity="center"
		android:visibility="gone"
	    >
		<TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/choose_device"
		    android:gravity="center"
		    android:padding="5dp"
		    />
		<View 
		    android:layout_width="match_parent"
		    android:layout_height="2px"
		    android:background="@color/app_base_color"
		    />
		<ListView 
		    android:id="@+id/lv_visitor_pwd"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/gray"
		    ></ListView>
	</com.zhy.autolayout.AutoLinearLayout>


		<!--密码生成显示框-->
	<com.zhy.autolayout.AutoRelativeLayout
	    android:id="@+id/ll_show_pwd"
	    android:layout_width="850px"
	    android:layout_height="450px"
	    android:visibility="gone"
	    android:layout_below="@+id/ll_choose"
	    android:orientation="vertical"
	    android:background="@drawable/shape_edging"
	    android:layout_marginTop="150px"
	    android:layout_centerHorizontal="true"
	    >
	    <TextView 
	    android:id="@+id/tv_show_effective_time"
	    android:layout_width="800px"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:padding="5dp"
	    android:text="@string/this_visitor_password_is_effective_in_ten_min"
	    />
	    <TextView 
	        android:id="@+id/tv_pwd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/holo_red_light"
	    	android:textSize="32sp"
			android:layout_centerInParent="true"
			android:gravity="center"
	        />
	    <com.zhy.autolayout.AutoRelativeLayout
	        android:layout_width="800px"
	        android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
	        >
	        
	    <TextView 
	        android:id="@+id/tv_show_door"
	        android:layout_width="800px"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:textColor="@color/app_base_color"
			android:layout_marginLeft="20px"
	        />
	    <ImageView 
	        android:id="@+id/iv_share"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/selector_share"
	        android:layout_alignParentRight="true"
	        />
	    </com.zhy.autolayout.AutoRelativeLayout>
	</com.zhy.autolayout.AutoRelativeLayout>

		<!--显示上次密码-->
	<com.zhy.autolayout.AutoLinearLayout
	    android:id="@+id/ll_show_last_time_pwd"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
		android:gravity="center"
		android:visibility="gone"
	    >
	    <TextView 
	    android:layout_width="400px"
	    android:layout_height="wrap_content"
	    android:text="@string/last_time_pwd"
	    android:textColor="@color/smartarea_button_one_show"
			android:gravity="center"
	    />
	<TextView 
	    android:id="@+id/last_time_pwd"
	    android:layout_width="400px"
	    android:layout_height="150px"
	    android:background="#F0EFF5"
	    android:textColor="@android:color/holo_red_light"
	    android:textSize="24sp"
	    android:gravity="center"
	    android:text="0000"
		android:layout_marginRight="10px"
		android:layout_marginBottom="10px"
	    />
	</com.zhy.autolayout.AutoLinearLayout>
	

	</com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoRelativeLayout>
